operational-modernization/plantsByWebSphere/twas-container-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: plantsbywebsphereee6
  name: plantsbywebsphereee6
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: plantsbywebsphereee6
